# edupal

./: .gitignore  LICENSE  README.md  pyproject.toml
src/edupal/: __init__.py  fpga.py  fpga_cv_import.py  fpga_draw.py  function_finder.py  latex_utils.py  strings.py  wavedrom_utils.py
tests/: test_function_finder.py  test_import.py  test_latex_utils.py  test_wavedrom_utils.py
