[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "edupal"
version = "0.1.1"
description = "Helper utilities for educational digital circuits. 'eduPAL' is targeting simple teaching-oriented PAL-style (Programmable Array Logic) designs."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Felix Miller", email = "felix.miller@hm.edu" }
]
keywords = [
  "education",
  "digital circuits",
  "PAL",
  "Programmable Array Logic",
  "wavedrom",
  "EDA",
  "LaTeX",
  "figures"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)"
]

# Runtime dependencies
dependencies = [
  "pyeda>=0.29",
]

[project.urls]
Homepage = "https://github.com/felixmiller/eduPAL"
Repository = "https://github.com/felixmiller/eduPAL"
Issues = "https://github.com/felixmiller/eduPAL/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
